Basically fixes the grid. Header/navi has been rewritten, which erased (the not yet working/visible) Bootstrap navi/hamburger style menu. It should be rewritten so it doesn't. Sizes in header are good now. Needs further cleaning and adjustments on the grid, as soon as the sizes are adjusted everywhere.

--- a/_sass/_lacuna.scss
+++ b/_sass/_lacuna.scss
@@ -2,7 +2,7 @@
 // limits the viewport to a max width
 @media (min-width: 1200px) {
   .container {
-    width: 940px;
+    width: 960px;
   }
 }
 
@@ -44,73 +44,105 @@ hr.brackets:after {
   text-decoration: underline;
 }
 
-
-#headerBracket {
-  width: 70px;
-  height: 50px;
-  margin-top: 34px;
-  margin-bottom: 10px;
-  margin-left: 50px;
-  float: left;
-  position:relative;
-}
-
-#headerBracket img {
-  position:absolute;
-  left:0;
-  width: 70px;
-  transition: opacity 5s ease-in-out;
-}
-
-.navbar-default {
+header {
+  padding-top: 16px;
   background-color: white;
-  border: none;
-  font-size: 20px;
-  font-weight: normal;
-}
-
-.navbar-link {
-  cursor: pointer;
-}
-.navbar-link[linkTo='about'] {
-    opacity: 0;
-}
-
-.navbar-nav {
-  margin-left: 4%;
-  margin-top: 20px;
-}
-
-.social-icons {
-  margin-top: 36px;  
-  position: relative;
-  right: -500px;
-}
-
-.language {
-  margin-top: 40px;
-  position: relative;
-  right: -520px;
-  display: none;
-}
-
-.social-icons li {
-  width: 40px;
-  a {
-    padding: 0px;
-    img {
-      width: 60%;
+  
+  & #headerBracket {
+    // position: relative;
+    
+    & .logoWrapper {
+      position: relative;
+      
+      & *[linkTo='about'] {
+        width: 100%;
+        opacity: 0;
+      
+        & img {
+          position: absolute;;
+          top:0;
+        }
+      }
+          
+      & img {
+        width: 100%;
+        transition: opacity 5s ease-in-out;
+      }
     }
   }
+
+  & #mainNavigation {
+    font-size: 12px;
+    
+    & > *:not(:first-child) { //> *
+      margin-left: 23px
+    }
+  }
+
+  & #social-icons {
+    // position: relative;
+    // right: -500px;
+    font-size: 9px;
+    text-align: right;
+    margin-top: 3px;
+    
+    & a {
+      margin-right: 6px;
+      text-decoration: none;
+      // padding: 0px;
+      // & img {
+      //   width: 60%;
+      // }
+    
+    }
+  }
+  
+  & #languages {
+    font-family: "Alegreya", Georgia, "Times New Roman", Times, serif;
+    font-size: 12px;
+    text-align: right;
+    
+    display: none; // disabled for now
+    
+    & a:not(:last-child) {
+      margin-right: 4px;
+    }
+  }
+  
+  // .navbar-default {
+  //   background-color: white;
+  //   border: none;
+  //   font-size: 20px;
+  //   font-weight: normal;
+  // }
+  // 
+  // .navbar-link {
+  //   cursor: pointer;
+  // }
+
+  // 
+  // .navbar-nav {
+  //   margin-top: 20px;
+  // }
+  // 
+  // 
+  // .language {
+  //   margin-top: 40px;
+  //   position: relative;
+  //   right: -520px;
+  //   display: none;
+  // }
+  // 
+  // 
+  // .social-media-link {
+  //   transform: scale(0.65,0.65);
+  // }
+  // 
+  // .language-element {
+  //   margin-left: 10px;
+  // }
 }
 
-.social-media-link {
-  transform: scale(0.65,0.65);
-}
-
-.language-element {
-  margin-left: 10px;
-}
 
 a.brackets:before {
   //content: "[ ";
@@ -132,8 +164,6 @@ h1 {
 }
 
 .about_text {
-  width:50%;
-  margin-left: 26%;
 }
 
 /*
@@ -147,7 +177,6 @@ is in the 2nd line.
   overflow: hidden;
   font-size: 40px;
   font-weight: bold;
-  margin-left: 26%;
   margin-bottom: 30px;
 }
 
